--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             border-radius: 25px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.2);
             position: relative;
+            transition: all 0.4s ease;
         }
 
         h1 {
@@ -33,7 +34,7 @@
 
         .buttons {
             position: relative;
-            height: 100px;
+            height: 120px;
         }
 
         button {
@@ -42,20 +43,20 @@
             border: none;
             border-radius: 50px;
             cursor: pointer;
-            transition: transform 0.2s ease;
+            transition: all 0.3s ease;
             position: absolute;
         }
 
         #yesBtn {
             background-color: #ff4d6d;
             color: white;
-            left: 30%;
+            left: 25%;
         }
 
         #noBtn {
             background-color: #6c757d;
             color: white;
-            left: 55%;
+            left: 60%;
         }
 
         button:hover {
@@ -77,8 +78,14 @@
     </style>
 </head>
 <body>
+
+    <!-- Background Romantic Music -->
+    <audio autoplay loop>
+        <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mp3">
+    </audio>
+
     <div class="container" id="proposalBox">
-        <h1>Will you be my Valentine? 💕</h1>
+        <h1>Hey My Beautiful Wife 💕<br>Will you be my forever Valentine?</h1>
         <div class="buttons">
             <button id="yesBtn">Yes 💖</button>
             <button id="noBtn">No 🙈</button>
@@ -99,10 +106,11 @@
         const proposalBox = document.getElementById("proposalBox");
         const celebrationBox = document.getElementById("celebrationBox");
 
+        let yesScale = 1;
+
+        // Make No button run away AND Yes button grow
         noBtn.addEventListener("mouseover", () => {
             const container = document.querySelector(".buttons");
-            const containerRect = container.getBoundingClientRect();
-
             const maxX = container.offsetWidth - noBtn.offsetWidth;
             const maxY = container.offsetHeight - noBtn.offsetHeight;
 
@@ -111,6 +119,10 @@
 
             noBtn.style.left = randomX + "px";
             noBtn.style.top = randomY + "px";
+
+            // Grow Yes button
+            yesScale += 0.15;
+            yesBtn.style.transform = `scale(${yesScale})`;
         });
 
         yesBtn.addEventListener("click", () => {
@@ -119,5 +131,6 @@
             document.body.style.background = "linear-gradient(135deg, #a18cd1, #fbc2eb)";
         });
     </script>
+
 </body>
 </html>
