--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         .buttons {
             display: flex;
             justify-content: center;
+            align-items: center;
             gap: 20px;
             margin-top: 10px;
         }
@@ -61,8 +62,8 @@
         #noBtn {
             background-color: #6c757d;
             color: white;
-            position: fixed;
-            z-index: 3;
+            /* IMPORTANT: starts normal */
+            position: relative;
         }
 
         button:hover {
@@ -117,7 +118,7 @@
         let musicStarted = false;
         let chaosMode = false;
 
-        // Start music on first interaction (browser policy safe)
+        // Start music on first interaction
         document.addEventListener("click", () => {
             if (!musicStarted) {
                 bgMusic.play().catch(() => {});
@@ -136,11 +137,16 @@
             noBtn.style.top = randomY + "px";
         }
 
-        // Only activate chaos AFTER first hover
+        // Activate chaos only after first hover
         noBtn.addEventListener("mouseover", () => {
             if (!chaosMode) {
                 chaosMode = true;
+
+                // Switch to fixed positioning while keeping current visual position
+                const rect = noBtn.getBoundingClientRect();
                 noBtn.style.position = "fixed";
+                noBtn.style.left = rect.left + "px";
+                noBtn.style.top = rect.top + "px";
             }
 
             moveNoButtonFullScreen();
